# WardLooker

./: README.md  WardLooker.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: tests.yml
src/: main.py
src/wardlooker/: WardLooker.py  main_gui.py
tests/: test_looker.py
