[metadata]
name = wardlooker
description = looks for unspent ward charges
author = Micah Prideaux
license = unlicensed
license_file = LICENSE
platforms = win32
classifiers =
    Programming Language :: Python 3
    Programming Language :: Python 3 :: Only
    Programming Language :: Python 3.7
    Programming Language :: Python 3.8
    Programming Language :: Python 3.9

[options]
packages =
    wardlooker
install_requires =
    pyautogui>=0.9.53
    opencv-python>=4.5
    pywin32>=301
python_requires = >= 3.7
package_dir =
    =src
zip_safe = no