[metadata]
name = wardlooker
description = looks for unspent ward charges
author = Micah Prideaux
license = unlicensed
license_file = LICENSE
platforms = win32
classifiers =
    Programming Language :: Python 3
    Programming Language :: Python 3 :: Only
    Programming Language :: Python 3.7
    Programming Language :: Python 3.8
    Programming Language :: Python 3.9

[options]
packages =
    wardlooker
install_requires =
    pyautogui>=0.9.53
    opencv-python>=4.5
    pywin32>=301
python_requires = >= 3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
wardlooker = py.typed

[flake8]
max-line-length = 160